--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "dev": "webpack-dev-server --content-base dist/ --inline --hot"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
