--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --content-base dist/ --inline --hot"
+    "dev": "webpack-dev-server --content-base dist/ --inline --hot",
+    "build": "webpack --env.production"
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -22,6 +23,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.0"
   },
